// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topbar-sticker For display only renders as expected 1`] = `
<div
  style={
    Object {
      "background": "pink",
      "height": 3000,
    }
  }
>
  <div
    className="px24 py12"
  >
    Above the bar.
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="px24 py12"
        >
          Here's some content that sticks to the top.
        </div>
      </div>
    </div>
  </div>
  <div
    className="px24 py12"
  >
    Below the bar, with lots of space to scroll.
  </div>
</div>
`;

exports[`topbar-sticker Unsticks at 900px renders as expected 1`] = `
<div
  style={
    Object {
      "background": "blue",
      "height": 3000,
    }
  }
>
  <div
    className="px24 py12"
  >
    Above the bar.
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="px24 py12"
        >
          I'm going to unstick at 900px wide or less!
        </div>
      </div>
    </div>
  </div>
  <div
    className="px24 py12"
  >
    Below the bar, with lots of space to scroll.
  </div>
</div>
`;
